--- a/admin/.dockerignore
+++ b/admin/.dockerignore
@@ -1,16 +1,16 @@
-node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.git
-.gitignore
-README.md
-Dockerfile
-.dockerignore
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-coverage
-.nyc_output
+// node_modules
+// npm-debug.log*
+// yarn-debug.log*
+// yarn-error.log*
+// .git
+// .gitignore
+// README.md
+// Dockerfile
+// .dockerignore
+// .env
+// .env.local
+// .env.development.local
+// .env.test.local
+// .env.production.local
+// coverage
+// .nyc_output
